# microarch-check

./: .gitignore
ucache-miss-granularity/: CMakeLists.txt  perf_idq_icache.sh
ucache-miss-granularity/src/: main.S  main.c  ucache-miss-check.S  ucache-miss-check.h  ucache-miss-check.mac
